         The format conversion from prior releases is handled transparently,
	 but releases older than 1.4.12/1.6.5 will not understand this new
	 format.  The automatic format conversion can be avoided by running
	 the following command on the MDS before upgrading:
		'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	 For more information, please refer to bugzilla 13904.

Severity   : minor
Frequency  : very rare
Bugzilla   : 13380
Description: MDT cannot be unmounted, reporting "Mount still busy"
Details	   : Mountpoint references were being leaked during open reply
	     reconstruction after an MDS restart.  Drop mountpoint reference
	     in reconstruct_open() and free dentry reference also.

Severity   : normal
Frequency  : with multiple concurrent readdir processes in same directory
Bugzilla   : 15406
Description: misc fixes (including bug 15169 and 15175) for directory readahead.
Details	   : prevent previous statahead async RPC callback from processing the
	     current "statahead_info", race condition between async RPC callback
	     add dentry into dentry hash table and "ls" thread revalidate such
	     dentry, statahead his/miss control for hidden items, and so on.

Severity   : enhancement
Bugzilla   : 15316
Description: build kernel-ib packages for OFED 1.3 in our release cycle

Severity   : minor
Frequency  : always
Bugzilla   : 13969
Description: fix SLES kernel versioning
Details    : the kernel version for our SLES 10 kernel did not include a "-"
	     before the "smp" at the end.  while this was not a problem in
	     general, it did mean that software trying to use the kernel
	     version to try to detect a vendor specific kernel would fail.
	     this was most evident by the OFED build scripts.

Severity   : normal
Frequency  : rare
Bugzilla   : 14803
Description: Don't update lov_desc members until making sure they are valid
Details    : When updating lov_desc members via proc fs, need fix their